@@ -47,19 +47,19 @@ test_job_SOURCES = tests/test_job.c
 test_job_LDFLAGS = -static
 test_job_LDADD = \
 	../nih/libnih.la ../upstart/libupstart.la \
-	process.o job.o event.o control.o
+	process.o job.o event.o control.o notify.o
 
 test_process_SOURCES = tests/test_process.c
 test_process_LDFLAGS = -static
 test_process_LDADD = \
 	../nih/libnih.la ../upstart/libupstart.la \
-	process.o job.o event.o control.o
+	process.o job.o event.o control.o notify.o
 
 test_event_SOURCES = tests/test_event.c
 test_event_LDFLAGS = -static
 test_event_LDADD = \
 	../nih/libnih.la ../upstart/libupstart.la \
-	process.o job.o event.o control.o
+	process.o job.o event.o control.o notify.o
 
 test_control_SOURCES = tests/test_control.c
 test_control_LDFLAGS = -static
@@ -77,7 +77,7 @@ test_cfgfile_SOURCES = tests/test_cfgfile.c
 test_cfgfile_LDFLAGS = -static
 test_cfgfile_LDADD = \
 	../nih/libnih.la ../upstart/libupstart.la \
-	process.o job.o event.o control.o cfgfile.o
+	process.o job.o event.o control.o notify.o cfgfile.o
 
 
 clean-local:
